feat: improve hiking safety UX and test coverage